--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -71,7 +71,7 @@
             </section>
 
             <section class="content-12">
-                <a class="wide btn-wide" href="data.html" target="_blank"><b>Fetch some data</b> from your area</a>
+                <a class="wide btn-wide" href="{% url 'data' %}" target="_blank"><b>Fetch some data</b> from your area</a>
             </section>
 
             <section class="contacts-4">
