--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -45,7 +45,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-8 col-sm-offset-2">
-                            <h3>The Second Sneak-Peek of Startup Framework</h3>
+                            <h3>CityFeel in Brief</h3>
                             <p class="lead">We’ve created the product that will help your
                                 startup to look even better.</p>
                         </div>
@@ -71,15 +71,16 @@
             </section>
 
             <section class="content-12">
-                <a class="wide btn-wide" href="{% url 'data' %}" target="_blank"><b>Fetch some data</b> from your area</a>
+                <a class="wide btn-wide" href="{% url 'data' %}" target="_blank"><b>Fetch data</b> from your area</a>
             </section>
 
             <section class="contacts-4">
                 <div class="container">
                     <div class="content">
                         <h3>The Heat Map</h3>
-                        <p>As a Harvard professor, he was one of the first to <br class="hidden-phone"> explore the relationship in equilibrium.</p>
-                        <button class="btn btn-default btn-wide">
+                        <p>We've created a map that, through tweets from <br />different areas of the city, shows the
+                            happiest <br />and the most sensitive zones.</p>
+                        <button class="btn btn-embossed btn-default btn-wide" onclick="window.open('map.html', '_blank')">
                           Try it
                         </button>
                     </div>
