--- a/core/static/ui-kit/ui-kit-header/style.css
+++ b/core/static/ui-kit/ui-kit-header/style.css
@@ -4101,7 +4101,7 @@ section * {
   position: relative;
 }
 .header-15-sub .background {
-  background-image: url("../../images/img-1.jpg");
+  background-image: url("../../images/img-city.jpg");
   opacity: 100;
   filter: alpha(opacity=10000);
   opacity: 1;
