--- a/core/templates/map.html
+++ b/core/templates/map.html
@@ -90,7 +90,7 @@
               heatmap = new google.maps.visualization.HeatmapLayer({
                 data: pointArray
               });
-
+                changeRadius(40);
               heatmap.setMap(map);
             }
 
