--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -64,7 +64,7 @@
                         <div class="col-sm-3 col-sm-offset-1">
                             <img src="{{ STATIC_URL }}common-files/icons/compas@2x.png" alt="" width="100" height="100">
                             <h6>Learn from your City</h6>
-                            You can easily combine any blocks in a variety of design projects.
+                            An heatmap allows everyone to understand in the easiest way what's going on.
                         </div>
                     </div>
                 </div>
